k8s-yaml/monitoring/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
    component: k8s
  annotations:
    prometheus.io/scrape: 'true'
spec:
  type: ClusterIP
  externalTrafficPolicy: Cluster
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: webui
  #externalIPs: 
  #  - 192.168.30.37
  selector:
    app: grafana
    component: k8s
