k8s-yaml/monitoring/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-dashboard
  namespace: monitoring

spec:
  rules:
  - host: monitor.tycng.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
